Swamy/12aug session 1 updates (#27)
* Changes

* Changes

* Changes

* Changes

* Changes

* Changes

* Create S2.md

* Documentation Updates

* Removed the files

* Changes

* Update tasks.json

* Update S1.md

* Update S1.md

* Changes

* Changes

* Changes

* Update S1.md

* Changes

* Changes

* Update S1.md

* Update S1.md

* Update S1.md

* Updates

* Update S1.md

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -136,6 +136,7 @@ dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 ```powershell
 dotnet restore
 dotnet build
+
 dotnet run --project .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
 
 dotnet run --project .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
@@ -215,9 +216,11 @@ namespace ProgramStructureDemo
 }
 ```
 
+![Program Execution](./images/S1/Program_Execution.PNG)
+
 ## 8. Exploring Program Structure
 
-> 1. Comments - Single line comments (//) and Multi-line comments (/*ddd*/).
+> 1. Comments - Single line comments (`//`) and Multi-line comments (`/*ddd*/`).
 > 1. Statements, Statements and Expressions (sum = num1 + num2; num1 + num2 is an expression). Statement terminates with semicolon (;).
 > 1. Keywords are reserved words that have special meaning in the language. You cannot use a keyword as an identifier, such as the name of a variable, method, or class.
 > 1. Block of code is a set of statements that are grouped together using curly braces ({ and }). Block of code is also called as code block.
@@ -225,7 +228,7 @@ namespace ProgramStructureDemo
 > 1. A class contains the members of an object, including methods.
 > 1. A namespace contains types like classes to group them together.
 > 1. A variable is a name that you create to store a value. To create a variable, you must specify the type and assign it a value. It should be in camelCase.
-> 1. Local Usings - using System; using System.Collections.Generic; using System.Linq; using System.Text; using System.Threading.Tasks;
+> 1. Local Usings in C# allow importing namespaces like 'System' and 'System.Collections.Generic' to access their classes and functionality within a specific code block.
 > 1. The Main method is the entry point of a C# application. (There can only be one entry point in a C# program.)
 > 1. Top-level statements are statements that aren't inside any type or namespace. They are supported in Program.cs file. It should be as part of entry point and one application should have only one entry point.
 > 1. The dot operator (.) is used to access members of a namespace, type, or object.
@@ -243,57 +246,42 @@ namespace ProgramStructureDemo
 
 ## 10. Creating `ProgramStructureDemoV2.csproj` Console Application with Top Level Statements
 
-> 1. Discussion and Demo
+### 10.1. Program.cs
+
+```csharp
+using ProgramStructureDemoV2.Services;
+
+// Uncomment the following line to see the exception with Program.<Main>$(String[] args) method.
+// throw new Exception("This is an exception");
+
+Console.ForegroundColor = ConsoleColor.Green;
+
+Console.WriteLine("Hello .NET 8 World!"); /* This is a statement and it ends with semi colon. */
+
+Console.WriteLine("Enter your name: ");
+var name = Console.ReadLine();
+Console.WriteLine($"Hello {name}!");
+
+int num1 = 10, num2 = 20; /* Variable declaration and initialization. */
+Maths maths = new(); /* Instantiation of Maths class. */
+Console.WriteLine($"{num1} + {num2} = {maths.AddNumbers(num1, num2)}");
+
+/* Accessing static members of a class. */
+Console.WriteLine($"{num1} + {num2} = {Maths.AddNumbersV1(num1, num2)}");
+Console.WriteLine($"Max value is {Maths.MaxValue}");
+
+Console.ResetColor();
+
+/* The dot operator (.) is used to access members of a namespace, type, or object. */
+Console.WriteLine("Press any key to exit.");
+Console.ReadKey();
+```
+
+![Program Execution](./images/S1/Program_Execution.PNG)
 
 ## 11. Viewing the `<Main>$()` method
 
 > 1. Discussion and Demo
-
-## X. SUMMARY / RECAP / Q&A
-
-> 1. Discussion and Demo
-
----
-
-## X. What is next ?
-
-> 1. Introduction to Variables
-> 1. Showing Compiler Version `#error version`
-> 1. ilDasm Demo
-> 1. `Global namespace imports` feature
-> 1. `File-scoped namespaces` feature
-> 1. Common Language Infrastructure (CLI)
-> 1. Creating a Console Application with .NET (6/7/8)
-> 1. Creating a Console Application with global.json inside folder
-> 1. Importing Namespaces
-> 1. Notification Icon
-> 1. Multiple Projects
-> 1. SUMMARY / RECAP / Q&A
-> 1. What is next ?
-
-## Next Session
-
-> 1. Top-level statements are statements that aren't inside any type or namespace. They can be used to declare variables and their types, define functions, and define classes.
-
-## 1. Console Application with and without Top Level Statements
-
-> 1. Discussion and Demo
-
-### 1.1 Without Top Level Statements
-
-```bash
-dotnet new console -o demo1 --use-program-main
-```
-
-![Demo 1 |150x150](./images/1/demo1.PNG)
-
-### 1.2. With Top Level Statements
-
-> 1. Top level Statements, will create `Program` class, and `<Main>$()` method
-
-```bash
-dotnet new console -o demo2
-```
 
 ```csharp
 using System;
@@ -309,4 +297,26 @@ internal class Program
 }
 ```
 
-![Demo 2 |150x150](./images/1/demo2.PNG)
+![Auto Generated Main Method |150x150](./images/S1/Auto_Generated_Main_Method.PNG)
+
+## X. SUMMARY / RECAP / Q&A
+
+> 1. Discussion and Demo
+
+---
+
+## X. What is next?
+
+> 1. Introduction to Variables
+> 1. Showing Compiler Version `#error version`
+> 1. ilDasm Demo
+> 1. `Global namespace imports` feature
+> 1. `File-scoped namespaces` feature
+> 1. Common Language Infrastructure (CLI)
+> 1. Creating a Console Application with .NET (6/7/8)
+> 1. Creating a Console Application with global.json inside folder
+> 1. Importing Namespaces
+> 1. Notification Icon
+> 1. Multiple Projects
+> 1. SUMMARY / RECAP / Q&A
+> 1. What is next?
