--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -14,10 +14,10 @@
 > 1. C# Language
 > 1. Exploring a few basic .NET CLI commands, Project Templates
 > 1. Preparing Folder, Solution, Project(s)
-> 1. Creating Console Application without Top Level Statements
+> 1. Modifying `ProgramStructureDemoV1.csproj` Console Application with Main() Method
 > 1. Exploring Program Structure
 > 1. Exploring Project Structure
-> 1. Creating Console Application with Top Level Statements
+> 1. Modifying `ProgramStructureDemoV2.csproj` Console Application with Top Level Statements
 > 1. Viewing the `<Main>$()` method
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next?
@@ -244,7 +244,7 @@ namespace ProgramStructureDemo
 > 1. **bin folder**: This folder contains the compiled output files, such as executable (.exe) or library (.dll) files, produced by building the project.
 > 1. **obj folder**: This folder holds intermediate build files created during the build process, including object files and metadata, used to create the final output in the bin folder.
 
-## 10. Creating `ProgramStructureDemoV2.csproj` Console Application with Top Level Statements
+## 10. Modifying `ProgramStructureDemoV2.csproj` Console Application with Top Level Statements
 
 ### 10.1. Program.cs
 
