--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -28,100 +28,19 @@
 
 ---
 
-**Reference(s):**
+## X. Preparing Folder, Solution, Project(s)
 
-> 1. [https://learn.microsoft.com/en-us/dotnet/core/introduction](https://learn.microsoft.com/en-us/dotnet/core/introduction)
-> 1. [https://en.wikipedia.org/wiki/.NET_Framework_version_history#](https://en.wikipedia.org/wiki/.NET_Framework_version_history#)
-> 1. [https://en.wikipedia.org/wiki/.NET](https://en.wikipedia.org/wiki/.NET)
-> 1. [https://dotnet.microsoft.com/en-us/learn/csharp](https://dotnet.microsoft.com/en-us/learn/csharp)
-> 1. [https://learn.microsoft.com/en-gb/dotnet/csharp/language-reference/](https://learn.microsoft.com/en-gb/dotnet/csharp/language-reference/)
-> 1. [https://learn.microsoft.com/en-gb/dotnet/api/?view=net-7.0&term=System.Console](https://learn.microsoft.com/en-gb/dotnet/api/?view=net-7.0&term=System.Console)
-> 1. [https://learn.microsoft.com/en-us/dotnet/](https://learn.microsoft.com/en-us/dotnet/)
-> 1. [https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/integral-numeric-types](https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/integral-numeric-types)
-
-## 1. What is .NET?
-
-> 1. .NET is a free, cross-platform, open source developer platform for building many different types of applications.
-> 1. With .NET, you can use multiple languages, editors, and libraries to build for web, mobile, desktop, games, and IoT.
-> 1. .NET is supported by Microsoft. Microsoft ships official releases that are built and tested on Microsoft-maintained servers in Azure and supported just like any Microsoft product.
-
-**Reference(s):**
-
-> 1. [https://dotnet.microsoft.com/en-us/learn/dotnet/what-is-dotnet](https://dotnet.microsoft.com/en-us/learn/dotnet/what-is-dotnet)
-
-## 2. .NET History
-
-### 2.1. .NET Framework
-
-> 1. Discussion [https://en.wikipedia.org/wiki/.NET_Framework_version_history#](https://en.wikipedia.org/wiki/.NET_Framework_version_history#)
-
-### 2.2. .NET Core 1.0 to 3.1, and .NET 5/6/7/8 and above
-
-> 1. Discussion [https://en.wikipedia.org/wiki/.NET](https://en.wikipedia.org/wiki/.NET)
-> 1. .NET includes a cross-platform implementation of the CLR known as CoreCLR and a streamlined BCL known as CoreFX.
-> 1. Releases Long Term Support (LTS), Standard Term Support (STS)
-
-## 3. 30,000 foot view of .NET Common Language Runtime (CLR), BCL, CoreCLR, CoreFX basics
-
-> 1. CLR is the virtual machine component of Microsoft's .NET framework and is responsible for managing the execution of .NET programs.
-> 1. It provides core services such as memory management, thread management, and remoting, while also enforcing strict type safety and other forms of code accuracy that promote security and robustness.
-> 1. It is a common language runtime that can be used by many programming languages, such as C#, F#, and Visual Basic.
-
-**Reference(s):**
-
-> 1. [https://learn.microsoft.com/en-us/dotnet/standard/clr](https://learn.microsoft.com/en-us/dotnet/standard/clr)
-> 1. [https://learn.microsoft.com/en-us/dotnet/standard/managed-execution-process](https://learn.microsoft.com/en-us/dotnet/standard/managed-execution-process)
-> 1. [https://en.wikipedia.org/wiki/Common_Language_Runtime](https://en.wikipedia.org/wiki/Common_Language_Runtime)
-
-## 4. C# Language
-
-> 1. C# is a modern, object-oriented programming language developed by Microsoft.
-> 1. C# is a multi-paradigm programming language.
-> 1. Program class is the entry point for every C# application and is required for every C# application.
-> 1. C# is case sensitive. (C# is case sensitive. This means that uppercase and lowercase letters are treated differently.)
-> 1. C# is commonly used for building Windows applications, web services, and games.
-> 1. Code Indentation is not required in C#. But it is recommended to use proper indentation to make the code more readable.
-
-## 5. Exploring few basic .NET CLI commands, Project Templates
-
-> 1. Discussion and Demo
-
-```bash
-dotnet --info
-
-dotnet --list-sdks 
-
-dotnet --list-runtimes 
-
-dotnet --version
-
-dotnet new
-
-dotnet new list
-
-dotnet new --help
-```
-
-## 6. Preparing Folder, Solution, Project(s)
-
-**Note:**
-
-> 1. We will be using Visual Studio Code as our IDE for this course.
-> 1. We will be learning Debugging using Visual Studio Code in **next session**.
-
-A C# project refers to a structured collection of source code files, resources, configurations, and settings that together constitute a software application or library developed using the C# programming language. In a C# project, you organize and manage your code and related assets in a way that facilitates development, compilation, testing, and deployment.
-
-A C# project serves as a container for your code and related assets, providing an organized and manageable way to develop and build your software. It also plays a crucial role in integrating your code with build tools, version control systems, and other development processes.
-
-### 6.1. Create Solution and Project(s)
+### 6.1. Create Solution
 
 ```powershell
-dotnet new sln -n S1
+dotnet new sln -n S2
+```
 
-dotnet new console -o ProgramStructureDemoV1
+### 6.2. Copy two projects from S1 folder to S2 folder and add them to the solution
+
+```powershell
 dotnet sln add .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
 
-dotnet new console -o ProgramStructureDemoV2
 dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 ```
 
