--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -8,17 +8,7 @@
 
 ## Agenda for this session
 
-> 1. What is .NET?
-> 1. .NET History
-> 1. 30,000 foot view of .NET Common Language Runtime (CLR), BCL, CoreCLR, and CoreFX basics
-> 1. C# Language
-> 1. Exploring a few basic .NET CLI commands, Project Templates
-> 1. Preparing Folder, Solution, Project(s)
-> 1. Creating Console Application without Top Level Statements
-> 1. Exploring Program Structure
-> 1. Exploring Project Structure
-> 1. Creating Console Application with Top Level Statements
-> 1. Viewing the `<Main>$()` method
+> 1. To be decided
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next?
 
@@ -30,13 +20,13 @@
 
 ## X. Preparing Folder, Solution, Project(s)
 
-### 6.1. Create Solution
+### X.X. Create Solution
 
 ```powershell
 dotnet new sln -n S2
 ```
 
-### 6.2. Copy two projects from S1 folder to S2 folder and add them to the solution
+### X.X. Copy two projects from S1 folder to S2 folder and add them to the solution
 
 ```powershell
 dotnet sln add .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
@@ -44,7 +34,17 @@ dotnet sln add .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
 dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 ```
 
-![Projects And Solution |150x150](./images/S1/Projects_and_Solution.PNG)
+![Projects And Solution |150x150](./images/S2/S1_With_Old_Projects.PNG)
+
+### X.X. Create New Console Project, Class Library (VB) and them to the solution S2
+
+```powershell
+dotnet new console -o ProgramStructureDemoV3
+dotnet sln add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
+
+dotnet new classlib -o MathServices --language VB
+dotnet sln add .\MathServices\MathServices.csproj
+```
 
 ### 6.2. Execute the Project(s)
 
