--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -34,7 +34,7 @@ dotnet sln add .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
 dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 ```
 
-![Projects And Solution |150x150](./images/S2/S1_With_Old_Projects.PNG)
+![Projects And Solution |150x150](./images/S2/S2_With_Old_Projects.PNG)
 
 ### X.X. Create New Console Project, Class Library (VB) and them to the solution S2
 
@@ -43,8 +43,10 @@ dotnet new console -o ProgramStructureDemoV3
 dotnet sln add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 dotnet new classlib -o MathServices --language VB
-dotnet sln add .\MathServices\MathServices.csproj
+dotnet sln add .\MathServices\MathServices.vbproj
 ```
+
+![S2 with Two New Projects |150x150](./images/S2/S2_With_Two_New_Projects.PNG)
 
 ### 6.2. Execute the Project(s)
 
