--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -62,6 +62,40 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing 3 Projects |150x150](./images/S2/Executing_3_Console_Apps.PNG)
 
+## X. Modify the MathServices Project and add it to the ProgramStructureDemoV3 Project
+
+### X.X. Modify the MathServices Project
+
+```vb
+Public Class Maths
+    Public Shared MaxValue As Integer = 100
+
+    Public Function AddNumbers(a As Integer, b As Integer) As Integer
+        Return a + b
+    End Function
+
+    Public Shared Function AddNumbersV1(a As Integer, b As Integer) As Integer
+        Return a + b
+    End Function
+End Class
+```
+
+### X.X. Add the MathServices Project to the ProgramStructureDemoV3 Project
+
+```powershell
+dotnet add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj reference .\MathServices\MathServices.vbproj
+```
+
+OR
+
+```xml
+  <ItemGroup>
+    <ProjectReference Include="..\MathServices\MathServices.vbproj" />
+  </ItemGroup>
+```
+
+![Add Project Reference |150x150](./images/S2/Add_Project_Reference.PNG)
+
 ## X. SUMMARY / RECAP / Q&A
 
 > 1. Discussion and Demo
