--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -96,6 +96,44 @@ OR
 
 ![Add Project Reference |150x150](./images/S2/Add_Project_Reference.PNG)
 
+## X. Modify the ProgramStructureDemoV3 Project and Execute
+
+### X.X. Modify the ProgramStructureDemoV3 Project
+
+```csharp
+using MathServices.MathLibrary;
+
+Console.ForegroundColor = ConsoleColor.Yellow;
+
+Console.WriteLine("Hello .NET 8 World!"); /* This is a statement and it ends with semi colon. */
+
+Console.WriteLine("Enter your name: ");
+var name = Console.ReadLine();
+Console.WriteLine($"Hello {name}!");
+
+int num1 = 10, num2 = 20; /* Variable declaration and initialization. */
+Maths maths = new(); /* Instantiation of Maths class. */
+Console.WriteLine($"{num1} + {num2} = {maths.AddNumbers(num1, num2)}");
+
+/* Accessing static members of a class. */
+Console.WriteLine($"{num1} + {num2} = {Maths.AddNumbersV1(num1, num2)}");
+Console.WriteLine($"Max value is {Maths.MaxValue}");
+
+Console.ResetColor();
+
+/* The dot operator (.) is used to access members of a namespace, type, or object. */
+Console.WriteLine("Press any key to exit.");
+Console.ReadKey();
+```
+
+### X.X. Execute the ProgramStructureDemoV3 Project
+
+```powershell
+dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
+```
+
+![Executing CSProj with VB.Net Library |150x150](./images/S2/Executing_CSProj_with_VBLibrary.PNG)
+
 ## X. SUMMARY / RECAP / Q&A
 
 > 1. Discussion and Demo
